--- a/MvcMovie.csproj
+++ b/MvcMovie.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Views\HelloWorld\Welcome.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Views\HelloWorld\Index1.cshtml" />
+  </ItemGroup>
+
 </Project>
